--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -2,64 +2,96 @@
 @import 'mixins';
 
 .excel__table {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: $header-height + $toolbar-height + $formula-height;
-    overflow-x: auto;
-    padding-bottom: 2px;
-    
-    .table__row {
-        display: flex;
-        flex-direction: row;
-        min-height: 20px;
-        height: $row-height;
-    }
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: $header-height + $toolbar-height + $formula-height;
+	overflow-x: auto;
+	padding-bottom: 2px;
+	
+	.table__row {
+		display: flex;
+		flex-direction: row;
+		min-height: 20px;
+		height: $row-height;
+	}
 
-    .row-info {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: $info-cell-width;
-        height: 100%;
-        border: 1px solid $border-color;
-        background: #f8f9fa;
-        border-top: none;
-    }
+	.row-info {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		min-width: $info-cell-width;
+		height: 100%;
+		border: 1px solid $border-color;
+		background: #f8f9fa;
+		border-top: none;
+	}
 
-    .row__data {
-        display: flex;
-    }
+	.row__data {
+		display: flex;
+	}
 
-    .data__column {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #f8f9fa;
-        min-width: 40px;
-        width: $cell-width;
-        border: 1px solid $border-color;
-        height: 100%;
-        border-top: none;
-        border-left: none;
-    }
+	.data__column {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background: #f8f9fa;
+		min-width: 40px;
+		width: $cell-width;
+		border: 1px solid $border-color;
+		height: 100%;
+		border-top: none;
+		border-left: none;
+		position: relative;
+	}
 
-    .cell {
-        min-width: 40px;
-        padding: 5px;
-        width: $cell-width;
-        height: 100%;
-        border: 1px solid #e2e2e3;
-        border-top: none;
-        border-left: none;
-        white-space: nowrap;
-        color: #111;
-        outline: none;
+	.cell {
+		min-width: 40px;
+		padding: 5px;
+		width: $cell-width;
+		height: 100%;
+		border: 1px solid #e2e2e3;
+		border-top: none;
+		border-left: none;
+		white-space: nowrap;
+		color: #111;
+		outline: none;
 
-        &.selected {
-            border: none;
-            outline: 2px solid #3c74ff;
-            z-index: 2;
-        }
-    }
+		&.selected {
+				border: none;
+				outline: 2px solid $primary-color;
+				z-index: 2;
+		}
+	}
+
+	.col-resize, .row-resize {
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		background: $primary-color;
+		opacity: 0;
+
+		&:hover {
+				opacity: 1 !important;
+		}
+	}
+
+	.col-resize {
+		top: 0;
+		width: 4px;
+
+		&:hover {
+			cursor: col-resize;
+		}
+	}
+
+	.row-resize {
+		left: 0;
+		height: 4px;
+
+		&:hover {
+				cursor: row-resize;
+		}
+	}
 }
