--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -1,97 +1,100 @@
-@import 'variables';
-@import 'mixins';
+@import "variables";
+@import "mixins";
 
 .excel__table {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: $header-height + $toolbar-height + $formula-height;
-	overflow-x: auto;
-	padding-bottom: 2px;
-	
-	.table__row {
-		display: flex;
-		flex-direction: row;
-		min-height: 20px;
-		height: $row-height;
-	}
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: $header-height + $toolbar-height + $formula-height;
+  overflow-x: auto;
+  padding-bottom: 2px;
 
-	.row-info {
-		position: relative;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		min-width: $info-cell-width;
-		height: 100%;
-		border: 1px solid $border-color;
-		background: #f8f9fa;
-		border-top: none;
-	}
+  .row {
+    display: flex;
+    flex-direction: row;
+    min-height: 20px;
+    height: $row-height;
+  }
 
-	.row__data {
-		display: flex;
-	}
+  .row-info {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: $info-cell-width;
+    height: 100%;
+    border: 1px solid $border-color;
+    background: #f8f9fa;
+    border-top: none;
+  }
 
-	.data__column {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		background: #f8f9fa;
-		min-width: 40px;
-		width: $cell-width;
-		border: 1px solid $border-color;
-		height: 100%;
-		border-top: none;
-		border-left: none;
-		position: relative;
-	}
+  .row-data {
+    display: flex;
+  }
 
-	.cell {
-		min-width: 40px;
-		padding: 5px;
-		width: $cell-width;
-		height: 100%;
-		border: 1px solid #e2e2e3;
-		border-top: none;
-		border-left: none;
-		white-space: nowrap;
-		color: #111;
-		outline: none;
+  .column {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f8f9fa;
+    min-width: 40px;
+    width: $cell-width;
+    border: 1px solid $border-color;
+    border-top: 0;
+    border-left: 0;
+    height: 100%;
+  }
 
-		&.selected {
-				border: none;
-				outline: 2px solid $primary-color;
-				z-index: 2;
-		}
-	}
+  .cell {
+    min-width: 40px;
+    padding: 5px;
+    width: $cell-width;
+    height: 100%;
+    border: 1px solid #e2e3e3;
+    border-top: 0;
+    border-left: 0;
+    color: #111;
+    white-space: nowrap;
+    outline: none;
 
-	.col-resize, .row-resize {
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		background: $primary-color;
-		opacity: 0;
 
-		&:hover {
-				opacity: 1 !important;
-		}
-	}
+    &.selected {
+      border: none;
+      outline: 2px solid $primary-color;
+      z-index: 2;
+    }
+  }
 
-	.col-resize {
-		top: 0;
-		width: 4px;
+  .col-resize, .row-resize {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: $primary-color;
+    opacity: 0;
+    z-index: 1000;
 
-		&:hover {
-			cursor: col-resize;
-		}
-	}
+    &:hover {
+      opacity: 1!important;
+    }
+  }
 
-	.row-resize {
-		left: 0;
-		height: 4px;
+  .col-resize {
+    top: 0;
+    width: 4px;
 
-		&:hover {
-				cursor: row-resize;
-		}
-	}
+    &:hover {
+      cursor: col-resize;
+    }
+  }
+
+  .row-resize {
+    left: 0;
+    height: 4px;
+
+    &:hover {
+      cursor: row-resize;
+    }
+  }
+
 }
